--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include edenai_apis/apis/*/outputs/*/*.json
 include edenai_apis/apis/*/info.json
 include edenai_apis/features/*/data/*
+include edenai_apis/features/ocr/identity_parser/countries.json
 recursive-include edenai_apis/utils *
