--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,8 +30,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.8"
       - name: generate doc
         run: |
+          pip install sphinx furo
           cd .docsrc
           sphinx-apidoc -o _build/ ../edenai_apis/
           make html
