--- a/requirements.txt
+++ b/requirements.txt
@@ -348,6 +348,8 @@ python-dateutil==2.8.2
     #   ibm-watson
     #   pandas
     #   watson-developer-cloud
+python-dotenv==0.21.0
+    # via -r requirements.in
 python-magic==0.4.27
     # via -r requirements.in
 pytz==2022.6
