--- a/edenai_apis/api_keys/mindee_settings_template.json
+++ b/edenai_apis/api_keys/mindee_settings_template.json
@@ -6,5 +6,9 @@
   "ocr_receipt": {
     "subscription_key": "",
     "url": ""
+  },
+  "ocr_id": {
+    "subscription_key": "",
+    "url": ""
   }
 }
