--- a/edenai_apis/api_keys/amazon_settings_template.json
+++ b/edenai_apis/api_keys/amazon_settings_template.json
@@ -2,7 +2,13 @@
   "aws_access_key_id": "",
   "aws_secret_access_key": "",
   "region_name": "",
+  "video-region": "",
   "storage_url": "",
-  "webhook_api_key": "",
-  "webhook_token": ""
+  "role_arn": "",
+  "storage_url_video": "",
+  "role": "",
+  "topic": "",
+  "topic_video": "",
+  "bucket": "",
+  "bucket_video": ""
 }
