--- a/edenai_apis/api_keys/google_settings_template.json
+++ b/edenai_apis/api_keys/google_settings_template.json
@@ -6,8 +6,10 @@
   "client_id": "",
   "client_x509_cert_url": "",
   "documentai": {
-    "process_id": "",
-    "project_id": 0
+    "project_id": 0,
+    "process_ocr_tables_id": "",
+    "process_invoice_id" : "",
+    "process_receipt_id" : ""
   },
   "private_key": "",
   "private_key_id": "",
