--- a/edenai_apis/api_keys/ibm_settings_template.json
+++ b/edenai_apis/api_keys/ibm_settings_template.json
@@ -1,18 +1,34 @@
 {
   "natural_language_understanding": {
     "apikey": "",
-    "url": ""
+    "url": "",
+    "iam_apikey_description": "",
+    "iam_apikey_name": "",
+    "iam_role_crn": "",
+    "iam_serviceid_crn": ""
   },
   "speech_to_text": {
     "apikey": "",
-    "url": ""
+    "url": "",
+    "iam_apikey_description": "",
+    "iam_apikey_name": "",
+    "iam_role_crn": "",
+    "iam_serviceid_crn": ""
   },
   "text_to_speech": {
     "apikey": "",
-    "url": ""
+    "url": "",
+    "iam_apikey_description": "",
+    "iam_apikey_name": "",
+    "iam_role_crn": "",
+    "iam_serviceid_crn": ""
   },
   "translator": {
     "apikey": "",
-    "url": ""
+    "url": "",
+    "iam_apikey_description": "",
+    "iam_apikey_name": "",
+    "iam_role_crn": "",
+    "iam_serviceid_crn": ""
   }
 }
