[fix] update settings

--- a/edenai_apis/api_keys/amazon_settings_template.json
+++ b/edenai_apis/api_keys/amazon_settings_template.json
@@ -10,5 +10,9 @@
   "topic": "",
   "topic_video": "",
   "bucket": "",
-  "bucket_video": ""
+  "bucket_video": "",
+  "cloudfront_key_id" : "",
+  "providers_resource_bucket": "",
+  "users_resource_bucket" : "",
+  "ressource_region": ""
 }
