--- a/edenai_apis/api_keys/clarifai_settings_template.json
+++ b/edenai_apis/api_keys/clarifai_settings_template.json
@@ -1,8 +1,5 @@
 {
+  "user_id": "",
   "app_id": "",
-  "explicit_content_code": "",
-  "face_detection_code": "",
-  "key": "",
-  "object_detection_code": "",
-  "user_id": ""
+  "key": ""
 }
