--- a/edenai_apis/api_keys/mindee_settings_template.json
+++ b/edenai_apis/api_keys/mindee_settings_template.json
@@ -1,14 +1,3 @@
 {
-  "ocr_invoice": {
-    "subscription_key": "",
-    "url": ""
-  },
-  "ocr_receipt": {
-    "subscription_key": "",
-    "url": ""
-  },
-  "ocr_id": {
-    "subscription_key": "",
-    "url": ""
-  }
+  "subscription_key": ""
 }
