--- a/edenai_apis/api_keys/api4ai_settings_template.json
+++ b/edenai_apis/api_keys/api4ai_settings_template.json
@@ -1,12 +1,3 @@
 {
-  "key": "",
-  "face_detection": {
-    "url": ""
-  },
-  "logo_detection": {
-    "url": ""
-  },
-  "object_detection": {
-    "url": ""
-  }
+  "key": ""
 }
