[refactor] allow upload file to veryfi bucket

--- a/edenai_apis/api_keys/veryfi_settings_template.json
+++ b/edenai_apis/api_keys/veryfi_settings_template.json
@@ -2,4 +2,8 @@
     "client_id": "",
     "client_secret": "",
     "Authorization": ""
+    "optional_iam_api_key_id": "",
+    "optional_iam_api_key_secret": "",
+    "optional_bucket_name": "",
+    "optional_upload_folder": ""
 }
