--- a/requirements.txt
+++ b/requirements.txt
@@ -370,7 +370,7 @@ pyopenssl==23.2.0
     # via watson-developer-cloud
 pyparsing==3.1.0
     # via httplib2
-pypdf2==3.0.1
+pypdf==3.16.2
     # via -r requirements.in
 pyrsistent==0.19.3
     # via jsonschema
