--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,54 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
+# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
 # Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
+  test:
     docker:
-      - image: cimg/base:stable
+      - image: cimg/python:3.8
     # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: Setup config files and folders
+          command: |
+            # Insall aws cli
+            pip install awscli --upgrade
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+            # Copy settings file
+            aws s3 cp $S3PATH edenai_apis/api_keys --recursive
+
+      - run:
+          name: Install dependencies
+          command: |
+            sudo apt-get update
+            sudo apt-get install ffmpeg -y
+            pip install -r requirements.txt
+
+      - run:
+          name: Test
+          command: |
+            cd edenai_apis
+            mkdir test-results
+            export TEST_SCOPE="CICD" &&  pytest -vvv -n auto --maxprocesses=8 --dist loadgroup  --junitxml=test-results/junit.xml --cov
+      - store_test_results:
+          path: edenai_apis/test-results/junit.xml
+      - store_artifacts:
+          path: edenai_apis/htmlcov
+
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  test-workflow:
     jobs:
-      - say-hello
+      - test:
+          context:
+            - Edenai-back
+          filters:
+            branches:
+              only:
+                - master
+                - circleci
