--- a/requirements.txt
+++ b/requirements.txt
@@ -477,6 +477,9 @@ requests==2.31.0
     #   requests-oauthlib
     #   sphinx
     #   watson-developer-cloud
+responses==0.24.1
+    # via
+    #   corticalio
 requests-oauthlib==1.3.1
     # via msrest
 rsa==4.9
