--- a/edenai_apis/api_keys/ai21labs_settings_template.json
+++ b/edenai_apis/api_keys/ai21labs_settings_template.json
@@ -1,5 +1,6 @@
 {
     "region_name": "",
     "aws_access_key_id": "",
-    "aws_secret_access_key": ""
+    "aws_secret_access_key": "",
+    "api_key": ""
 }
