--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,12 @@ amazon-textract-response-parser==0.1.48
     # via -r requirements.in
 annotated-types==0.5.0
     # via pydantic
+anthropic-bedrock==0.8.0
+    # via -r requirements.in
+anyio==4.2.0
+    # via
+    #   anthropic-bedrock
+    #   httpx
 astroid==2.15.5
     # via pylint
 async-timeout==4.0.3
@@ -65,15 +71,19 @@ boto3==1.29.6
     # via
     #   -r requirements.in
     #   amazon-textract-response-parser
+    #   anthropic-bedrock
     #   sagemaker
 botocore==1.32.7
     # via
+    #   anthropic-bedrock
     #   boto3
     #   s3transfer
 cachetools==5.3.1
     # via google-auth
 certifi==2023.5.7
     # via
+    #   httpcore
+    #   httpx
     #   msrest
     #   requests
 cffi==1.15.1
@@ -93,9 +103,7 @@ constantly==15.1.0
 contextlib2==21.6.0
     # via schema
 coverage[toml]==7.2.7
-    # via
-    #   coverage
-    #   pytest-cov
+    # via pytest-cov
 cryptography==41.0.1
     # via
     #   autobahn
@@ -109,10 +117,14 @@ dill==0.3.6
     #   multiprocess
     #   pathos
     #   pylint
+distro==1.9.0
+    # via anthropic-bedrock
 docutils==0.20.1
     # via sphinx
 exceptiongroup==1.1.2
-    # via pytest
+    # via
+    #   anyio
+    #   pytest
 execnet==1.9.0
     # via pytest-xdist
 ffmpeg-python==0.2.0
@@ -213,10 +225,16 @@ grpcio==1.56.0
     #   grpcio-status
 grpcio-status==1.48.2
     # via google-api-core
+h11==0.14.0
+    # via httpcore
+httpcore==1.0.2
+    # via httpx
 httplib2==0.22.0
     # via
     #   google-api-python-client
     #   google-auth-httplib2
+httpx==0.26.0
+    # via anthropic-bedrock
 huggingface-hub==0.16.4
     # via tokenizers
 hyperlink==21.0.0
@@ -229,6 +247,8 @@ ibm-watson==7.0.0
     # via -r requirements.in
 idna==3.4
     # via
+    #   anyio
+    #   httpx
     #   hyperlink
     #   requests
     #   yarl
@@ -307,6 +327,7 @@ openai==0.28.1
     # via -r requirements.in
 packaging==23.2
     # via
+    #   aleph-alpha-client
     #   google-cloud-aiplatform
     #   google-cloud-bigquery
     #   huggingface-hub
@@ -395,7 +416,9 @@ pycountry==22.3.5
 pycparser==2.21
     # via cffi
 pydantic==2.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   anthropic-bedrock
 pydantic-core==2.0.1
     # via pydantic
 pydub==0.25.1
@@ -456,6 +479,7 @@ pytz==2023.3
 pyyaml==6.0
     # via
     #   huggingface-hub
+    #   responses
     #   sagemaker
 requests==2.31.0
     # via
@@ -475,13 +499,13 @@ requests==2.31.0
     #   msrest
     #   openai
     #   requests-oauthlib
+    #   responses
     #   sphinx
     #   watson-developer-cloud
-responses==0.24.1
-    # via
-    #   corticalio
 requests-oauthlib==1.3.1
     # via msrest
+responses==0.24.1
+    # via -r requirements.in
 rsa==4.9
     # via google-auth
 s3transfer==0.7.0
@@ -507,6 +531,11 @@ six==1.16.0
     #   python-dateutil
 smdebug-rulesconfig==1.0.1
     # via sagemaker
+sniffio==1.3.0
+    # via
+    #   anthropic-bedrock
+    #   anyio
+    #   httpx
 snowballstemmer==2.2.0
     # via sphinx
 soupsieve==2.4.1
@@ -533,7 +562,9 @@ sphinxcontrib-serializinghtml==1.1.5
 tblib==1.7.0
     # via sagemaker
 tokenizers==0.14.0
-    # via aleph-alpha-client
+    # via
+    #   aleph-alpha-client
+    #   anthropic-bedrock
 tomli==2.0.1
     # via
     #   coverage
@@ -555,6 +586,8 @@ typing-extensions==4.7.1
     # via
     #   aleph-alpha-client
     #   annotated-types
+    #   anthropic-bedrock
+    #   anyio
     #   astroid
     #   azure-ai-formrecognizer
     #   azure-core
@@ -578,6 +611,7 @@ urllib3==1.26.16
     #   google-auth
     #   ibm-cloud-sdk-core
     #   requests
+    #   responses
 watson-developer-cloud==2.0.0
     # via -r requirements.in
 websocket-client==1.1.0
