add 2 new subfeatures

--- a/edenai_apis/api_keys/extracta_settings_template.json
+++ b/edenai_apis/api_keys/extracta_settings_template.json
@@ -2,5 +2,6 @@
     "api_key": "",
     "url": "",
     "uploadFileRoute": "",
-    "getResultRoute": ""
+    "getResultRoute": "",
+    "processFileRoute": ""
 }
