[Feat] add google embeddings multimodal

--- a/.pylintrc
+++ b/.pylintrc
@@ -250,9 +250,7 @@ preferred-modules=
 [MISCELLANEOUS]
 
 # List of note tags to take in consideration, separated by a comma.
-notes=FIXME,
-      XXX,
-      TODO
+notes=
 
 # Regular expression of note tags to take in consideration.
 notes-rgx=
