--- a/requirements.in
+++ b/requirements.in
@@ -39,17 +39,18 @@ boto3
 clarifai-grpc==9.10.7
 
 #google
-google-api-python-client==2.88.0
-google-cloud-documentai==2.15.0
-google-cloud-language==2.10.0
-google-cloud-speech==2.20.0
-google-cloud-storage==2.9.0
-google-cloud-texttospeech==2.14.1
-google-cloud-translate==3.11.1
-google-cloud-vision==3.4.2
-google-cloud-videointelligence==2.11.2
-google-cloud-automl==2.11.1
-google-cloud-aiplatform==1.35.0
+
+google-api-python-client>=2.124.0
+google-cloud-documentai>=2.24.2
+google-cloud-language>=2.13.3
+google-cloud-speech>=2.25.1
+google-cloud-storage>=2.16.0
+google-cloud-texttospeech>=2.16.3
+google-cloud-translate>=3.15.3
+google-cloud-vision>=3.7.2
+google-cloud-videointelligence>=2.13.3
+google-cloud-automl>=2.13.3
+google-cloud-aiplatform>=1.45.0
 
 #ibm
 ibm-watson>=6.0.0
