--- a/requirements.txt
+++ b/requirements.txt
@@ -118,8 +118,6 @@ distro==1.9.0
     # via anthropic-bedrock
 docker==7.0.0
     # via sagemaker
-docstring-parser==0.16
-    # via google-cloud-aiplatform
 docutils==0.20.1
     # via sphinx
 execnet==2.0.2
@@ -154,31 +152,22 @@ google-api-core[grpc]==2.18.0
     #   google-cloud-translate
     #   google-cloud-videointelligence
     #   google-cloud-vision
-google-api-python-client==2.124.0
+google-api-python-client==2.88.0
     # via -r requirements.in
 google-auth==2.29.0
     # via
     #   google-api-core
     #   google-api-python-client
     #   google-auth-httplib2
-    #   google-cloud-aiplatform
-    #   google-cloud-automl
     #   google-cloud-bigquery
     #   google-cloud-core
-    #   google-cloud-documentai
-    #   google-cloud-language
     #   google-cloud-resource-manager
-    #   google-cloud-speech
     #   google-cloud-storage
-    #   google-cloud-texttospeech
-    #   google-cloud-translate
-    #   google-cloud-videointelligence
-    #   google-cloud-vision
 google-auth-httplib2==0.2.0
     # via google-api-python-client
-google-cloud-aiplatform==1.45.0
+google-cloud-aiplatform==1.35.0
     # via -r requirements.in
-google-cloud-automl==2.13.3
+google-cloud-automl==2.11.1
     # via -r requirements.in
 google-cloud-bigquery==3.19.0
     # via google-cloud-aiplatform
@@ -187,30 +176,28 @@ google-cloud-core==2.4.1
     #   google-cloud-bigquery
     #   google-cloud-storage
     #   google-cloud-translate
-google-cloud-documentai==2.24.2
+google-cloud-documentai==2.15.0
     # via -r requirements.in
-google-cloud-language==2.13.3
+google-cloud-language==2.10.0
     # via -r requirements.in
 google-cloud-resource-manager==1.12.3
     # via google-cloud-aiplatform
-google-cloud-speech==2.25.1
+google-cloud-speech==2.20.0
     # via -r requirements.in
-google-cloud-storage==2.16.0
+google-cloud-storage==2.9.0
     # via
     #   -r requirements.in
     #   google-cloud-aiplatform
-google-cloud-texttospeech==2.16.3
+google-cloud-texttospeech==2.14.1
     # via -r requirements.in
-google-cloud-translate==3.15.3
+google-cloud-translate==3.11.1
     # via -r requirements.in
-google-cloud-videointelligence==2.13.3
+google-cloud-videointelligence==2.11.2
     # via -r requirements.in
-google-cloud-vision==3.7.2
+google-cloud-vision==3.4.2
     # via -r requirements.in
 google-crc32c==1.5.0
-    # via
-    #   google-cloud-storage
-    #   google-resumable-media
+    # via google-resumable-media
 google-pasta==0.2.0
     # via sagemaker
 google-resumable-media==2.7.0
@@ -244,7 +231,7 @@ httplib2==0.22.0
     #   google-auth-httplib2
 httpx==0.27.0
     # via anthropic-bedrock
-huggingface-hub==0.22.1
+huggingface-hub==0.22.2
     # via tokenizers
 hyperlink==21.0.0
     # via
@@ -424,7 +411,6 @@ pydantic==2.6.4
     # via
     #   -r requirements.in
     #   anthropic-bedrock
-    #   google-cloud-aiplatform
 pydantic-core==2.16.3
     # via pydantic
 pydub==0.25.1
