Test check providers with python 3.11

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: cimg/python:3.8
+      - image: cimg/python:3.11
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
@@ -41,7 +41,7 @@ jobs:
 
   check_providers:
     docker:
-      - image: cimg/python:3.8
+      - image: cimg/python:3.11
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     parameters:
@@ -56,7 +56,7 @@ jobs:
           command: |
             sudo apt-get update
             sudo apt-get install build-essential libssl-dev libasound2 wget
-            
+
             wget http://security.ubuntu.com/ubuntu/pool/main/o/openssl/libssl1.1_1.1.0g-2ubuntu4_amd64.deb
             sudo dpkg -i libssl1.1_1.1.0g-2ubuntu4_amd64.deb
 
@@ -70,12 +70,11 @@ jobs:
             sudo apt-get update
             sudo apt-get install ffmpeg -y
             pip install -e .
-            
+
       - run:
           name: check working providers
           command: |
             python edenai_apis/scripts/check_not_working_providers.py << parameters.interval >>
-
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -93,11 +92,12 @@ workflows:
   nightly:
     triggers:
       - schedule:
-          cron: "0 6 * * 1-5"
+          #cron: "0 6 * * 1-5"
           filters:
             branches:
               only:
                 - master
                 - release
+                - fix/check_providers
     jobs:
-     - check_providers
+      - check_providers
