[fix] add requirements for genai

--- a/requirements.in
+++ b/requirements.in
@@ -51,6 +51,7 @@ google-cloud-vision==3.4.2
 google-cloud-videointelligence==2.11.2
 google-cloud-automl==2.11.1
 google-cloud-aiplatform==1.35.0
+google-generativeai==0.6.0 
 
 #ibm
 ibm-watson>=6.0.0
