Upgrade Azure OCR

--- a/edenai_apis/api_keys/microsoft_settings_template.json
+++ b/edenai_apis/api_keys/microsoft_settings_template.json
@@ -7,7 +7,7 @@
     "subscription_key": "",
     "url": ""
   },
-  "form_recognizer": {
+  "documentintelligence": {
     "url": "",
     "subscription_key": ""
   },
