Put 'form_recognizer' back into the microsoft settings template

--- a/edenai_apis/api_keys/microsoft_settings_template.json
+++ b/edenai_apis/api_keys/microsoft_settings_template.json
@@ -7,6 +7,10 @@
     "subscription_key": "",
     "url": ""
   },
+  "form_recognizer": {
+    "url": "",
+    "subscription_key": ""
+  },
   "documentintelligence": {
     "url": "",
     "subscription_key": ""
