--- a/edenai_apis/api_keys/microsoft_settings_template.json
+++ b/edenai_apis/api_keys/microsoft_settings_template.json
@@ -54,5 +54,9 @@
     "training_key": "",
     "prediction_key": "",
     "resource_id": ""
+  },
+  "generative": {
+    "url": "",
+    "key": ""
   }
 }
