[feat] updated dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,7 @@ pandas = "^2.2.3"
 pdf2image = "^1.17.0"
 pillow = "^11.1.0"
 pycountry = "^24.6.1"
-pydantic = "2.7.4"
+pydantic = "^2.7.4"
 pylint = "^3.3.5"
 mypy = "^1.15.0"
 pydub = "^0.25.1"
@@ -97,40 +97,40 @@ furo = "^2024.8.6"
 psycopg2 = "^2.9.10"
 pytest-mock = "^3.14.0"
 pytest-cov = "^6.0.0"
-pytest = "7.4.4"
+pytest = "^7.4.4"
 pytest-xdist = "^3.6.1"
 pytest-timeout = "^2.3.1"
 affinda = "^4.25.0"
 amazon-textract-response-parser = "^1.0.3"
-boto3 = "1.35.84"
-clarifai-grpc = "9.10.7"
-google-api-python-client = "2.88.0"
-google-cloud-documentai = "2.15.0"
-google-cloud-language = "2.10.0"
-google-cloud-speech = "2.26.0"
-google-cloud-storage = "2.9.0"
-google-cloud-texttospeech = "2.14.1"
-google-cloud-translate = "3.11.1"
-google-cloud-vision = "3.4.2"
-google-cloud-videointelligence = "2.11.2"
-google-cloud-automl = "2.11.1"
-google-cloud-aiplatform = "1.35.0"
+boto3 = "^1.35.84"
+clarifai-grpc = "^9.10.7"
+google-api-python-client = "^2.88.0"
+google-cloud-documentai = "^2.15.0"
+google-cloud-language = "^2.10.0"
+google-cloud-speech = "^2.26.0"
+google-cloud-storage = "^2.9.0"
+google-cloud-texttospeech = "^2.14.1"
+google-cloud-translate = "^3.11.1"
+google-cloud-vision = "^3.4.2"
+google-cloud-videointelligence = "^2.11.2"
+google-cloud-automl = "^2.11.1"
+google-cloud-aiplatform = "^1.35.0"
 ibm-watson = "^9.0.0"
-lettria = "6.0.0"
-azure-ai-formrecognizer = "3.3"
+lettria = "^6.0.0"
+azure-ai-formrecognizer = "^3.3"
 azure-cognitiveservices-speech = "^1.42.0"
 azure-core = "^1.32.0"
-aleph-alpha-client = "6.0.0"
-openai = "1.55.3"
+aleph-alpha-client = "^6.0.0"
+openai = "^1.55.3"
 python-dotenv = "^1.0.1"
-responses = "0.24.1"
-anthropic-bedrock = "0.8.0"
+responses = "^0.24.1"
+anthropic-bedrock = "^0.8.0"
 docstring-parser = "^0.16"
 pymupdf = "^1.25.4"
 asgiref = "^3.8.1"
-jsonschema = ">=4.22"
-litellm = ">=1.58.0"
-requests = ">=2.32"
+jsonschema = "^4.22"
+litellm = "^1.58.0"
+requests = "^2.32"
 
 
 [build-system]
