--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
-name = "edenaiapis"
+name = "edenai-apis"
 version = "0.1.2"
 description = "Providers connectors"
 dynamic = ["dependencies"]
 requires-python = ">=3.11"
-license = { file = "LICENCE"}
+license = { file = "LICENSE"}
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: Apache Software License",
@@ -66,6 +66,7 @@ documentation = "https://docs.edenai.co/docs"
 name = "edenai-apis"
 version = "0.1.2"
 description = "Providers connectors"
+license = "Apache-2.0"
 authors = [
     "Samy Melaine <samy@edenai.co>",
     "François Humbert <francois.humbert@edenai.co>",
